Added label to gloassary Fixed errors en AUCD Fixed errors in Actors Fixed errors in Moscow Fixed errors in digram in logisk view Added litterature in bib

--- a/LaTeX/Projektdokumtation/Forside/Glossary2.tex
+++ b/LaTeX/Projektdokumtation/Forside/Glossary2.tex
@@ -1,6 +1,7 @@
 \subsection{Glossary}
 
 \begin{table}[H]
+	\label{glos}
 \begin{tabularx}{\textwidth}{|p{4cm}|X|}
 \hline
 \textbf{\gls{SB}} & \glsdesc{SB}\\\hline
