--- a/LaTeX/Projektdokumtation/Kravspecifikation/AUCD.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/AUCD.tex
@@ -5,4 +5,4 @@
     \label{fig:aktcont}
 \end{figure}
 
-I figur \ref{fig:aktcont} ses det hvordan de forskellige aktører har forbindelse med de individuelle usecases.
+På figur \ref{fig:aktcont} ses det hvordan de forskellige aktører har forbindelse til de individuelle usecases.
