--- a/LaTeX/Projektdokumtation/Kravspecifikation/Actors/Actors.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/Actors/Actors.tex
@@ -16,7 +16,7 @@ På baggrund af aktør kontekstdiagrammet i figur \ref{fig:aktcont}, er følgend
 \hline
  	\textbf{Type} & Primær \\
 \hline
-	\textbf{Beskrivelse} & \gls{Eks} er en primær bruger af systemet, som benytter systemet til at sælge og returnere vare. \\
+	\textbf{Beskrivelse} & \gls{Eks} er en primær bruger af systemet, som benytter systemet til at sælge og returnere varer. \\
 \hline
 \end{tabularx}
 \captionsetup{justification=raggedright,singlelinecheck=false}
@@ -27,7 +27,7 @@ På baggrund af aktør kontekstdiagrammet i figur \ref{fig:aktcont}, er følgend
 \begin{table}[H]
     \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-	\textbf{Navn} & Super User \\
+	\textbf{Navn} & \gls{SB} \\
 \hline
  	\textbf{Type} & Primær \\
 \hline
@@ -46,7 +46,7 @@ På baggrund af aktør kontekstdiagrammet i figur \ref{fig:aktcont}, er følgend
 \hline
  	\textbf{Type} & Sekundær \\
 \hline
-	\textbf{Beskrivelse} & Kunden er en sekundær bruger af systemet, og ønsker at købe/returnere en eller flere varer igennem \gls{Eks}.   \\
+	\textbf{Beskrivelse} & Kunden er en sekundær bruger af systemet, som ønsker at købe/returnere en eller flere varer igennem \gls{Eks}.   \\
 \hline
 \end{tabularx}
 \captionsetup{justification=raggedright,singlelinecheck=false}
