--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/Moscow.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/Moscow.tex
@@ -4,11 +4,11 @@
 
 \begin{itemize}
 
-\item Systemet skal have et \gls{AS}, hvor en \gls{SB} kan oprette, redigere og slette \gls{PDK} og \gls{PD} i databasen
-\item Systemet skal indeholde et \gls{KA}, hvor …:
+\item Systemet skal have et administrationssystem, hvor en superbruger kan oprette, redigere og slette produkter og produktkategorier i en database.
+\item Systemet skal indeholde et kasseapparat, hvor …:
 \begin{itemize}
-\item En \gls{Eks} kan sælge produkter til kunder
-\item En kunde kan returnere varer til en \gls{Eks}
+\item En ekspedient kan sælge produkter til kunder
+\item En kunde kan returnere varer til en ekspedient
 \end{itemize}
 \item \gls{KA} skal …:
 \begin{itemize}
@@ -16,7 +16,7 @@
 \item Danne en salgskvittering
 \item Danne en rekvisionskvittering
 \end{itemize}
-\item Indeholde en \gls{DB}, som indeholder et produktkatalog
+\item Indeholde en database, som indeholder et produktkatalog
 \item Indeholde kommunikation mellem \gls{AS} og \gls{KA}
 
 \end{itemize}
@@ -28,15 +28,15 @@
 
 \item Understøtte brugerlogin i flere niveauer
 \begin{itemize}
-\item En \gls{SB}, der kan tilgå \gls{AS}\\
-\item En \gls{Eks}, der kan tilgå \gls{KA}
+\item  \gls{SB}, der kan tilgå \gls{AS}\\
+\item  \gls{Eks}, der kan tilgå \gls{KA}
 \end{itemize}
 \item Ekspeditioner kan parkeres midlertidigt
-\item Benytte variabel momssats per \gls{PD}
+\item Benytte variabel momssats per produkt
 \item Understøtte flere forskellige instanser af \gls{KA} på samme tid
 \item Understøtte tilbudskampagner
 \item Have kontrol af lagerbeholdningen i \gls{AS}
-\item En \gls{Eks} kan afskrive et \gls{PD}, hvis den f.eks. er gået i stykker
+\item \gls{Eks} kan afskrive et produkt, hvis den f.eks. er gået i stykker
 \item Vise salgsstatistik i \gls{AS}
 \item Udskrive en salgskvittering via \gls{KA}
 \item \gls{KA} bør kunne tage imod dankort betaling
@@ -52,6 +52,6 @@
 \item Understøtte betaling med forskellige slags valuta
 \item Have mulighed for, at kunder, som har en konto, kan få rabat
 \item Tage imod betaling fra en mobilapplikation
-\item VIP Medlemmer skal kunne modtage en email med deres salgskvittering
+\item VIP\footnote{Very Important Person} Medlemmer skal kunne modtage en email med deres salgskvittering
 
 \end{itemize}
