--- a/LaTeX/Projektdokumtation/Kravspecifikation/Systembeskrivelse/Systembeskrivelse.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/Systembeskrivelse/Systembeskrivelse.tex
@@ -1,3 +1,5 @@
-Vi fremstiller et salgssystem til fysiske butikker. Systemet består af en central server, hvortil et eller flere kasseapperater er tilsluttet. Ekspedienter kan ekspedere kunder via et kasseapperat, som kan tilgås via en skærm eller touch-skærm. Superbruger kan tilgå et administrationssystem igennem en vilkårlig maskine, som har adgang til internettet eller på lokalt netværk med Central server. Her er der mulighed for at oprette, redigere og slette produkter og produktgrupper.\\
+Der fremstilles et salgssystem til fysiske butikker. Systemet består af en central server, hvortil et eller flere kasseapperater er tilsluttet. Ekspedienter kan ekspedere kunder via et kasseapperat, som kan tilgås via en skærm eller touch-skærm. Superbruger kan tilgå et administrationssystem igennem en vilkårlig maskine, som har adgang til internettet eller på lokalt netværk med den centrale server. Her er der mulighed for at oprette, redigere og slette produkter og produktgrupper.\\
 
 Den centrale server indeholder en database, hvor produkter, produktgrupper mv. ligger gemt. Herfra henter kasseapperaterne de nødvendige informationer såsom produktoplysninger. Kasseapperater informerer desuden den centrale server når salg og andre relevante begivenheder finder sted.
+
+Herefter er delsystemerne benævnt som ordlisten beskriver på side \pageref{glos}.
