--- a/LaTeX/Projektrapport/RapportBib.bib
+++ b/LaTeX/Projektrapport/RapportBib.bib
@@ -41,3 +41,23 @@
   		howpublished = {\url{https://www.jetbrains.com/}},
   		note = {Set: 11/12-2015}
 }
+
+@article{	MVVM,
+		author = "Rovsing, Poul Ejner",
+		title = "The Model-View-ViewModel Design Pattern",
+		year = "2014",
+		pages = "5-36",
+}
+
+@misc{PRISM,
+ 		 title = {Prism Library},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/gg406140.aspx}},
+  		note = {Tilgået: 14/12-2015}
+}
+
+
+@misc{	TCPIP,
+		title = {TCP/IP Protocol Architecture},
+  		howpublished = {\url{https://technet.microsoft.com/en-us/library/cc958821.aspx}},
+  		note = {Tilgået: 08/12-2015}
+}
