--- a/LaTeX/Projektrapport/Konklusion/Konklusion.tex
+++ b/LaTeX/Projektrapport/Konklusion/Konklusion.tex
@@ -1,1 +1,8 @@
 \chapter{Konklusion}
+I forhold til den stillede opgave og den efterfølgende afgrænsning er der blevet produceret en fungerende prototype, som overholder systemets minimumskrav. Der var dog fra starten ambitioner om at nå mere end minimumskravene, men i løbet af projektet viste det sig, at nogle ting krævede mere at implementere end oprindeligt forventet.\\
+
+I forhold til projektstyring og process har vi iht. projektets krav benyttet en iterativ process. Der er blevet afholdt ugentlige (og til tider daglige) statusmøder, hvor de enkelte gruppemedlemmer har haft mulighed for at oplyse resten af gruppen om deres fremgang i projektet. Dette har fungeret godt, og gruppemedlemmerne føler generelt, at de har været velinformeret om hinandens arbejde igennem hele processen.\\
+
+Den iterative process kombineret med projekt- og versionsstyringsværktøjer har gjort det nemt at arbejde sammen i mindre grupper på tværs af delsystemerne.\\
+
+I udarbejdelsen af det endelige produkt er der blevet anvendt teori fra samtlige af vores 4. semester kurser på tværs af delsystemerne. Det har endvidere været et krav til projektet, at der blev anvendt en grafisk brugergrænseflade, en database samt netværkskommunikation. Dette er blevet opnået ved at benytte grænseflade-frameworket WPF, SQL-server til opbevaring af persistent data, samt klient-server arkitektur til kommunikation mellem delsystemer.\\
