--- a/LaTeX/Projektrapport/Resume/Resume.tex
+++ b/LaTeX/Projektrapport/Resume/Resume.tex
@@ -1,8 +1,8 @@
 \section*{Resumé}
 Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen I Aarhus (Aarhus Universitet). Formålet er at lave et tværfagligt projekt, der dækker over de 5 udbudte kurser på IKT-studiets 4. semester. Dette har samtidigt haft til formål at skabe praktisk erfaringen inden for agil softwareudvikling, og dertilhørende test, versionsstyring mm.\\
 Igennem udviklingen er der anvendt en afart af SCRUM for at holde projektet agilt, dette er benyttet sammen med en iterativ udviklingsmetode, og har sikret at det har været muligt at udvikle de forskellige projektdele sideløbende. Der er anvendt jenkins til continous integration samt til at holde styr på CodeCoverage og git for versionsstyring. \\
-Der er blevet udviklet en funktionel prototype af et kassesystem, som overholder projektets krav og specifikationer. Dette kassesystem er blevet udviklet over 5 iterationer med en total længde på 14 uger. Kassesystemet indeholder 3 individuelle systemer, hhv. kasseapparat, centralserver og administrationssystem samt en pakke der indeholder fælles logik. 
-Til at opsætte grænsefladen på kasseapparatet samt administrationssystemet er der benyttet WPF i C#. De data der vises på grænsefladerne er gemt i en database igennem centralserveren ved brug af Entity Framework. \\
+Der er blevet udviklet en funktionel prototype af et kassesystem, som overholder projektets krav og specifikationer. Dette kassesystem er blevet udviklet over fem iterationer med en total længde på 14 uger. Kassesystemet indeholder tre individuelle systemer, hhv. kasseapparat, centralserver og administrationssystem samt en pakke der indeholder fælles logik. 
+Til at opsætte grænsefladen på kasseapparatet samt administrationssystemet er der benyttet WPF i C\#. De data der vises på grænsefladerne er gemt i en database igennem centralserveren ved brug af Entity Framework. \\
 Måske mere konklusion?
 
 
