Corrected grammar in UC4 through UC8

--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC6.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC6.tex
@@ -10,14 +10,14 @@
 \textbf{Aktører}				& \gls{SB} \\\hline
 \textbf{Reference}				& Ingen. \\\hline								
 \textbf{Samtidige forekomster}	& $\infty$ \\\hline
-\textbf{Prækondition}			& Der skal være et \gls{PD} at slette. \\\hline
-\textbf{Postkondition}			& Det valgte \gls{PD} skal være slettet. \\
+\textbf{Prækondition}			& Der skal være et produkt at slette. \\\hline
+\textbf{Postkondition}			& Det valgte produkt skal være slettet. \\
 \hline
-\textbf{Hovedscenarie}			& 1. \gls{SB} vælger det \gls{PD} der ønskes slettet og trykker på knappen til at slette \gls{PD}.\\												
-								& 2. Et dialogvindue, der spørger om \gls{PD}et ønskes slettet, vises på skærmen.\\
+\textbf{Hovedscenarie}			& 1. \gls{SB} vælger det produkt der ønskes slettet, og trykker på knappen til at slette \gls{PD}.\\												
+								& 2. Et dialogvindue, der spørger om produktet ønskes slettet, vises på skærmen.\\
 								& 3. \gls{SB} trykker på knappen til at godkende sletningen og dialogvinduet forsvinder.\\
 								& ~ [Ext 1: \gls{SB} vælger at annullere sletningen.]\\
-								& 4. \gls{PD}et slettets umiddelbart herefter fra listen over \gls{PD}er.\\
+								& 4. \gls{PD}et slettets umiddelbart herefter fra listen over produkt.\\
 								& ~ [Ext 2: \gls{CS} melder fejl]\\
 \hline
 \textbf{Extensions}				& [Ext 1: \gls{SB} vælger at annullere sletningen.]\\
