--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC7.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC7.tex
@@ -14,10 +14,10 @@
 
 \textbf{Prækondition}			& Der er oprettet forbindelse til \gls{CS} og der er instanser af \gls{PDK} i systemet. \\\hline
 
-\textbf{Postkondition}			& Der er oprettet en \textit{ny} \gls{PDK} i systemet \\\hline
+\textbf{Postkondition}			& Der er oprettet en \textit{ny} instans af \gls{PDK} i systemet \\\hline
 
-\textbf{Hovedscenarie}			& 1. \gls{SB} trykker på knappen til opret \gls{PDK} \\		
-								& 2. Et pop up vindue åbnes i \gls{GUI}, hvori der indtastes informationer om \gls{PDK}.\\
+\textbf{Hovedscenarie}			& 1. \gls{SB} trykker på knappen til opret produktkategori \\		
+								& 2. Et pop up vindue åbnes i \gls{AS}'s \gls{GUI}, hvori der indtastes informationer om produktkategorien.\\
 								& 3. \gls{SB} trykker på knappen til gem\\
 								& ~ [Ext 1: \gls{PDK} eksisterer allerede]\\
 								& 3. Systemet sender kommando med information til \gls{CS}. \\
