--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC8.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC8.tex
@@ -5,7 +5,7 @@
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
 \textbf{Navn}					& Rediger \gls{PDK} \\\hline
-\textbf{Formål}					& At redigere en \gls{PDK} \\\hline
+\textbf{Formål}					& At redigere en instans af \gls{PDK} \\\hline
 \textbf{Initialisering}			& \gls{SB} \\\hline
 \textbf{Aktører}				& \gls{SB} (Primær)\\\hline
 \textbf{Reference}				& Ingen \\\hline
@@ -14,14 +14,14 @@
 
 \textbf{Prækondition}			& Forbindelse til \gls{CS} er oprettet \\\hline
 
-\textbf{Postkondition}			& \gls{PDK}en er redigeret i systemet \\\hline
+\textbf{Postkondition}			& Instansen af \gls{PDK} er redigeret i systemet \\\hline
 
-\textbf{Hovedscenarie}			& 1. \gls{SB} trykker på den \gls{PDK} der ønskes at redigere i listen af \gls{PDK}er. \\		
-								& 2. \gls{SB}en trykker på knappen til rediger \gls{PD} i hovedmenuen.\\
+\textbf{Hovedscenarie}			& 1. \gls{SB} trykker på den produktkategori der ønskes at redigere i listen af produktkategorier. \\		
+								& 2. \gls{SB}en trykker på knappen til rediger produkt i hovedmenuen.\\
 								& 3.  \gls{SB}en ændrer de ting der ønskes at redigeres, og trykker på knappen til gem. \\
-								& 4. \gls{AS} modtager opdatering om redigeret \gls{PDK}. \\
+								& 4. \gls{AS} modtager opdatering om redigeret produktkategori. \\
 								& ~ [Ext 1: \gls{CS} melder fejl.\\
-								& 5. \gls{AS} opdaterer listen af \gls{PDK}er \\\hline
+								& 5. \gls{AS} opdaterer listen af produktkategorier \\\hline
 
 \textbf{Extensions}							
 								& [Ext 1: \gls{CS} melder fejl]\\
