--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC5.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC5.tex
@@ -17,15 +17,15 @@
 \textbf{Postkondition}			& Det valgte \gls{PD} er opdateret med ny data \\
 \hline
 \textbf{Hovedscenarie}			& 1. \gls{SB} vælger det \gls{PD} der ønskes redigeret, og trykker på knappen til at redigere \gls{PD}.\\
-								& 2. Et nyt vindue åbner, med det valgte \gls{PD}s nuværende informationer.\\
+								& 2. Et nyt vindue åbner, med det valgte produkts nuværende informationer.\\
 								& 3. \gls{SB} redigerer det data der ønskes ændret og trykker på knappen til gem.\\
 								& ~ [Ext 1: \gls{SB} vælger at annullere ændringen]\\
 								& ~ [Ext 2: \gls{CS} melder fejl]\\
-								& 4. Vinduet lukker og det valgte \gls{PD} opdateres med det nye data.\\
+								& 4. Vinduet lukker og det valgte produkt opdateres med det nye data.\\
 \hline
 \textbf{Extensions}				& [Ext 1: \gls{SB} vælger at annullere ændringen.] \\
 								& ~ 1. \gls{SB} trykker på knappen til at annullere.\\
-								& ~ 2. Vinduet til at redigere data lukker, hovedmenuen vises og det valgte \gls{PD} forbliver uændret.\\
+								& ~ 2. Vinduet til at redigere data lukker, hovedmenuen vises og det valgte produkt forbliver uændret.\\
 								& [Ext 2: \gls{CS} melder fejl] \\
 								& ~ 1. Beskedboks informerer \gls{SB} om fejl. \\
 								& ~ 2. Usecasen afsluttes \\\hline
