--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Realiseringer/UC1-2.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Realiseringer/UC1-2.tex
@@ -5,8 +5,8 @@ Disse Use Cases beskriver følgende funktionalitet:
 	\item Gennemfør salg
 	\item Returner vare
 \end{itemize}
-Funktionaliteten til disse Use Cases ligner hinanden. Når \gls{Eks} har udført de nødvendige
-handlinger i \gls{KA} \gls{GUI} og trykker på knappen til at afslutte handel, så bliver der sendt data til \gls{CS}.
+Funktionaliteten i disse Use Cases ligner hinanden. Når \gls{Eks} har udført de nødvendige
+handlinger i \gls{KA} \gls{GUI} og trykker på knappen til at afslutte handel, bliver der sendt data til \gls{CS}.
 
 Når ekspedienten har gennemført et salg/retur i \gls{KA} så vil følgende
 handlinger blive udført i systemet:
