--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC8.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC8.tex
@@ -1,11 +1,11 @@
-\subsection{Use case 7: Rediger \gls{PDK}}
+\subsection{Use case 7: Rediger produktkategori}
 
 
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
 \textbf{Navn}					& Rediger \gls{PDK} \\\hline
-\textbf{Formål}					& At redigere en instans af \gls{PDK} \\\hline
+\textbf{Formål}					& At redigere en produktkategori \\\hline
 \textbf{Initialisering}			& \gls{SB} \\\hline
 \textbf{Aktører}				& \gls{SB} (Primær)\\\hline
 \textbf{Reference}				& Ingen \\\hline
@@ -14,7 +14,7 @@
 
 \textbf{Prækondition}			& Forbindelse til \gls{CS} er oprettet \\\hline
 
-\textbf{Postkondition}			& Instansen af \gls{PDK} er redigeret i systemet \\\hline
+\textbf{Postkondition}			& Produktkategorien er redigeret i systemet \\\hline
 
 \textbf{Hovedscenarie}			& 1. \gls{SB} trykker på den produktkategori der ønskes at redigere i listen af produktkategorier. \\		
 								& 2. \gls{SB}en trykker på knappen til rediger produkt i hovedmenuen.\\
@@ -28,6 +28,6 @@
 								& ~ 1. Beskedboks informerer \gls{SB} om fejl.\\
 								& ~ 2. Usecasen afsluttes.\\\hline
 \end{tabularx}
-\caption{Use case 7: Rediger \gls{PDK}}
+\caption{Use case 7: Rediger produktkategori}
 \label{tab:UCrpk}
 \end{table}
