--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC5.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC5.tex
@@ -1,11 +1,11 @@
-\subsection{Use case 4: Rediger \gls{PD}}
+\subsection{Use case 4: Rediger produkt}
 
 
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{|l|X|}
 \hline
-\textbf{Navn}					& Rediger \gls{PD} \\\hline
-\textbf{Formål}					& \gls{PD} bliver redigeret \\\hline
+\textbf{Navn}					& Rediger produkt \\\hline
+\textbf{Formål}					& At produkt bliver redigeret \\\hline
 \textbf{Initialisering}			& \gls{SB} \\\hline
 \textbf{Aktører}				& \gls{SB} \\\hline
 \textbf{Reference}				& Ingen \\\hline
@@ -14,9 +14,9 @@
 \hline
 \textbf{Prækondition}			& Der er oprettet forbindelse til \gls{CS} \\
 \hline
-\textbf{Postkondition}			& Det valgte \gls{PD} er opdateret med ny data \\
+\textbf{Postkondition}			& Det valgte produkt er opdateret med ny data \\
 \hline
-\textbf{Hovedscenarie}			& 1. \gls{SB} vælger det \gls{PD} der ønskes redigeret, og trykker på knappen til at redigere \gls{PD}.\\
+\textbf{Hovedscenarie}			& 1. \gls{SB} vælger det produkt der ønskes redigeret, og trykker på knappen til at redigere produkt.\\
 								& 2. Et nyt vindue åbner, med det valgte produkts nuværende informationer.\\
 								& 3. \gls{SB} redigerer det data der ønskes ændret og trykker på knappen til gem.\\
 								& ~ [Ext 1: \gls{SB} vælger at annullere ændringen]\\
@@ -31,6 +31,6 @@
 								& ~ 2. Usecasen afsluttes \\\hline
 								
 \end{tabularx}
-\caption{Use case 4: Rediger \gls{PD}}
+\caption{Use case 4: Rediger produkt}
 \label{tab:UCrp}
 \end{table}
