--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Realiseringer/UC1-2.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Realiseringer/UC1-2.tex
@@ -12,9 +12,9 @@ Når ekspedienten har gennemført et salg/retur i \gls{KA} så vil følgende
 handlinger blive udført i systemet:
 \begin{itemize}
 	\item \gls{KA} opretter det korrekte kommando objekt, via \gls{SL}, med informationerne for handlen
-	\item \gls{KA} bruger \gls{SL} til at konvertere kommando objektet til en XML streng
-	\item XML strengen sendes til \gls{CS}
-	\item \gls{CS} modtager strengen og konverterer den tilbage til den oprindelige kommando, igen ved hjælp af \gls{SL}
+	\item \gls{KA} bruger \gls{SL} til at konvertere kommando objektet til en XML string
+	\item XML stringen sendes til \gls{CS}
+	\item \gls{CS} modtager stringen og konverterer den tilbage til den oprindelige kommando, igen ved hjælp af \gls{SL}
 	\item \gls{CS} udfører de nødvendige handlinger på \gls{DB}
 \end{itemize}
 
