Fixed error in uc4 Fixed produkt and productgaspodaspkdsa gøgl in ikk funkt

--- a/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC4.tex
+++ b/LaTeX/Projektdokumtation/Kravspecifikation/FunktionelleKrav/UC4.tex
@@ -1,4 +1,4 @@
-\subsection{Use case 3: Opret produkt} \label{prodkat}
+\subsection{Use case 3: Opret produkt} \label{prodkast}
 At oprette et produkt til systemet.
 
 
