--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur.tex
@@ -1,6 +1,6 @@
 \subsection{Design og struktur}
 Kasseapparatet er designet med MVVM~\cite{MVVM}, og dertil også med stor fokus på adskilelse af Forretningslag og Præsentationslaget. Dette er sikret ved brug af viewmodels der står for at styre logikken i grænsefladen samt kommunikere ned i de nedre lag. Disse bliver forklaret nærmere længere nede i kapitel ?.
-Vores system er herunder beskrevet ved følgende pakkediagram for at give et hurtigt overblik.	
+Systemet er herunder beskrevet ved følgende pakkediagram for at give et hurtigt overblik.	
 
 \begin{figure}[H]
 	\centering
