--- a/LaTeX/Projektrapport/Resume/Resume.tex
+++ b/LaTeX/Projektrapport/Resume/Resume.tex
@@ -1,9 +1,9 @@
 \section*{Resumé}
-Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen I Aarhus (Aarhus Universitet). Formålet er at lave et tværfagligt projekt, der dækker over de 5 udbudte kurser på IKT-studiets 4. semester. Dette har samtidigt haft til formål at skabe praktisk erfaringen inden for agil softwareudvikling, og dertilhørende test, versionsstyring mm.\\
-Igennem udviklingen er der anvendt en afart af SCRUM for at holde projektet agilt, dette er benyttet sammen med en iterativ udviklingsmetode, og har sikret at det har været muligt at udvikle de forskellige projektdele sideløbende. Der er anvendt jenkins til continous integration samt til at holde styr på CodeCoverage og git for versionsstyring. \\
-Der er blevet udviklet en funktionel prototype af et kassesystem, som overholder projektets krav og specifikationer. Dette kassesystem er blevet udviklet over 5 iterationer med en total længde på 14 uger. Kassesystemet indeholder 3 individuelle systemer, hhv. kasseapparat, centralserver og administrationssystem samt en pakke der indeholder fælles logik. 
-Til at opsætte grænsefladen på kasseapparatet samt administrationssystemet er der benyttet WPF i C\#. De data der vises på grænsefladerne er gemt i en database igennem centralserveren ved brug af Entity Framework. \\
-Måske mere konklusion?
+Dette projekt er udviklet af seks studerende fra Ingeniørhøjskolen, Aarhus Universitet. Formålet er at lave et tværfagligt projekt, der dækker de fem udbudte kurser på IKT-studiets 4. semester. Det har samtidigt haft til formål at skabe praktisk erfaring med agil softwareudvikling, og dertilhørende test, versionsstyring mm.\\
+
+I projektet er der udviklet en funktionel prototype af et digitalt salgssystem, hvor et eller flere kasseapparater kan forbindes. Derudover er der udviklet et administrationssystem, hvor superbrugere kan vedligeholde produktkateloget, samt en central server, hvor kasseapparater og administrationssystemer kan forbinde til. Kasseapparat og administrationssystem er udviklet med grafiske brugergrænseflader.\\
+
+Igennem processen er der anvendt en iterativ udviklingsprocess i form af en afart af SCRUM for at holde projektet agilt. Dette har sikret muligheden for at udvikle på forskellige delsystemer sideløbende. Produktet er blevet udviklet i fem iterationer over 14 uger. Der er anvendt Jenkins til continuous integration samt til at holde styr på CodeCoverage. Der er benyttet Git til versionsstyring af kildekode, dokumentation og rapport.
 
 
 \section*{Abstract}
