Reviewed files for system architecture

--- a/LaTeX/Projektdokumtation/Systemarkitektur/ImplementeringsView/Oversigt.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/ImplementeringsView/Oversigt.tex
@@ -16,9 +16,8 @@ På diagrammet i figur \ref{fig:devview} ses det hvordan de tre funktionelle sys
 En eventuel ændring i \gls{SL}, ville have betydelige konsekvenser for de resterende systemer. Det er derfor vigtigt at gøre sig overvejelser over hvor disse afhængigheder er i systemet, inden man foretager større ændringer. Eksempler på konkrete afhængigheder kunne være:
 
 \begin{itemize}
-  \item \gls{PD}
-  \item \gls{PDK}
-  \item XML-marshallere mf.
+  \item Produkter
+  \item Produktkategorier
 \end{itemize}
 
 En reference må da være til stede i alle systemer, som ønsker at arbejde med produkter eller kommunikation i systemet.
