--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Oversigt.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/Oversigt.tex
@@ -1,6 +1,6 @@
 \subsection{Oversigt}\label{logical:oversigt}
 
-Der er herunder opsat et pakkediagram over de delsystemer vi har indentificeret i projektet. Hver pakke symboliserer derved et system der skal implementeres individuelt. <<Flow>> fortæller at der er kommunikation imellem systemerne, og <<use>> symboliserer at systemerne benytter sig af pakken. Dybere forklaring af hvordan hver pakke er designet vil blive beskrevet i designdelen.
+Der er herunder opsat et pakkediagram over de delsystemer vi har identificeret i projektet. Hver pakke symboliserer derved et system der skal implementeres individuelt. <<Flow>> fortæller at der er kommunikation imellem systemerne, og <<use>> symboliserer at systemerne benytter sig af pakken. Dybere forklaring af hvordan hver pakke er designet vil blive beskrevet i designdelen.
 
 \begin{figure}[ht]
 	\centering
