--- a/LaTeX/Projektdokumtation/Systemarkitektur/PhysicalView/NodeBeskrivelser.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/PhysicalView/NodeBeskrivelser.tex
@@ -4,7 +4,7 @@
 \gls{KA} kommunikerer med \gls{CS} gennem en TCP/IP forbindelse. Forbindelsen benyttes til at hente produktkataloget samt at registrere køb.
 
 \subsubsection{Administrationssystem}
-\gls{AS} kommunikerer med \gls{CS} gennem en TCP/IP forbindelse. Forbindelsen benyttes til at hente produktkataloget samt at oprette, redigere og slette \gls{PD} og \gls{PDK}.
+\gls{AS} kommunikerer med \gls{CS} gennem en TCP/IP forbindelse. Forbindelsen benyttes til at hente produktkataloget samt at oprette, redigere og slette produkter og produktkategorier.
 
 \subsubsection{CentralServer}
 \gls{CS} stiller en server til rådighed, som \gls{KA} og \gls{AS} kan forbinde til (beskrevet ovenfor). \gls{CS} foretager også alt den nødvendige interaktion med Database.
