--- a/LaTeX/Projektdokumtation/Systemarkitektur/PhysicalView/Oversigt.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/PhysicalView/Oversigt.tex
@@ -1,6 +1,6 @@
 \subsection{Oversigt}
 
-Vi har valgt at tage Physical View med fordi det beskriver hvordan de forskellige del-systemer er forbundne, og hvilke veje kommunikationen mellem dem foregår.
+Der er valgt at tage Physical View med fordi det beskriver hvordan de forskellige delsystemer er forbundne, og hvilke veje kommunikationen mellem dem foregår.
 
 \begin{figure}[htb]
     \centering
@@ -9,4 +9,4 @@ Vi har valgt at tage Physical View med fordi det beskriver hvordan de forskellig
     \label{fig:physicalview}
 \end{figure}
 
-Alle del-systemer kommunikerer vha. TCP/IP~\cite{TCPIP} sockets, og systemerne kan derfor eksekvere og kommunikere asynkront på forskellige fysiske maskiner. \gls{Eks} og \gls{SB} kan derfor tilgå hvert deres system på samme tid fra forskellige maskiner.
+Alle delsystemer kommunikerer vha. TCP/IP~\cite{TCPIP} sockets, og systemerne kan derfor eksekvere og kommunikere asynkront på forskellige fysiske maskiner. \gls{Eks} og \gls{SB} kan derfor tilgå hvert deres system på samme tid fra forskellige maskiner.
