--- a/LaTeX/Projektdokumtation/Systemarkitektur/ImplementeringsView/Komponentbeskrivelser.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/ImplementeringsView/Komponentbeskrivelser.tex
@@ -1,11 +1,13 @@
 \subsection{Komponentbeskrivelser}
 
-\subsubsection{Administrationssytstem} Denne bruger sharedLib i samtlige lag. Dette indebærer bl.a. modeller, protokoller, marshallers mv.
+\subsubsection{Administrationssytstem}
+Denne bruger \gls{SL} i samtlige lag. Dette indebærer visning modeller i brugergrænsefladen, samt benyttelse af protokoller til at sende og modtage data.
 
-\subsubsection{CentralServer} Denne benytter sharedLib til protokoller og modeller.
+\subsubsection{CentralServer}
+Denne benytter \gls{SL} til protokoller og modeller.
 
-\subsubsection{Kasseapparatet} Benytter ligesom Administrationssystemet, SharedLib i dets grafiske lag samt business logic lag. Igen bruges der modeller og protokoller så alle er enige om disse.
+\subsubsection{Kasseapparatet}
+Benytter ligesom \gls{AS}, \gls{SL} i dets grafiske lag samt business logic lag. Igen bruges der modeller og protokoller så alle er enige om disse.
 
 \subsubsection{SharedLib}
-Denne en fælles afhængighed for alle systemets komponenter. Denne indeholder modeller
-, xml-marshallers, socketforbindelser, encoder, decoders mv. s
+Denne er en fælles afhængighed for alle systemets komponenter. \gls{SL} indeholder fælles modeller (Produkter, produktkategorier), kommandoer der skal sendes til og fra \gls{CS} og protokol til at encode og decode kommandoerne.
