--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeAdministrationssystem.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeAdministrationssystem.tex
@@ -1,11 +1,11 @@
 \subsubsection{\gls{AS}}
 \textbf{Ansvar}\\
-\gls{AS} er den del af systemet, hvor produktkataloget bliver redigeret. Dette indebærer oprettelse, sletning og ændring af \gls{PD}, såvel som \gls{PDK}. Pakken bliver betjent af \gls{SB}, se figur \ref{fig:aktcont}, side \pageref{fig:aktcont}.\\
+\gls{AS} er den del af systemet, hvor produktkataloget bliver redigeret. Dette indebærer oprettelse, sletning og ændring af produkter, såvel som produktkategorier. \gls{AS} bliver betjent af \gls{SB}, se aktørkontekst diagram, figur \ref{fig:aktcont} side \pageref{fig:aktcont}.\\
 
 \textbf{Sekvensdiagram}
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.5]{Systemarkitektur/LogiskView/Administrationssystem-sekvensdiagram}
+	\includegraphics[width=\textwidth]{Systemarkitektur/LogiskView/Administrationssystem-sekvensdiagram}
 	\caption{Sekvensdiagram for kommunikation mellem \gls{AS} og andre pakker}
 	\label{fig:logview_admin_sekvensdiagram}
 \end{figure}
