--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeCentralServer.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeCentralServer.tex
@@ -12,6 +12,6 @@
     \label{fig:cssekv}
 \end{figure}
 
-På figur \ref{fig:cssekv} ses hvordan \gls{CS}, når den modtager XML, benytter \gls{SL} til at konvertere det modtagede XML til et højniveau kommando-objekt, som \gls{CS} herefter kan agere på. Det enten værende indsættelse/sletning af data i databasen eller andet. Til sidst vil \gls{CS} igen benytte \gls{SL} til at konverete et højniveau svar om til XML, som sendes ud til alle tilstedeværende klienter.\\\\
+På figur \ref{fig:cssekv} ses hvordan \gls{CS}, når den modtager XML, benytter \gls{SL} til at konvertere det modtagede XML til et højniveau kommando objekt, som \gls{CS} herefter kan agere på. Det enten værende indsættelse/sletning af data i databasen eller andet. Til sidst vil \gls{CS} igen benytte \gls{SL} til at konverete et højniveau svar om til XML, som sendes ud til alle tilstedeværende klienter.\\\\
 
-Dette er det typiske sekvens af kommunikation mellem klient og server, men det er ikke noget krav, at \gls{CS} agerer på den modtagede besked, eller for den sags skyld svarer tilbage til klienten.
+Dette er den typiske sekvens af kommunikation mellem klient og server, men det er ikke noget krav, at \gls{CS} agerer på den modtagede besked, eller for den sags skyld svarer tilbage til klienten.
