--- a/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeDatabase.tex
+++ b/LaTeX/Projektdokumtation/Systemarkitektur/LogiskView/PakkeDatabase.tex
@@ -2,4 +2,4 @@
 
 \textbf{Ansvar}
 
-\gls{DB}n benyttes til at opbevare persistent data, herunder \gls{PD}, \gls{PDK} og køb. Det er udelukkende \gls{CS}, som interagerer med \gls{DB}.
+\gls{DB}n benyttes til at opbevare persistent data, herunder produkter, produktkategorier og køb. Det er udelukkende \gls{CS}, som interagerer med \gls{DB}.
