--- a/LaTeX/Projektrapport/Resume/Resume.tex
+++ b/LaTeX/Projektrapport/Resume/Resume.tex
@@ -7,8 +7,8 @@ Igennem processen er der anvendt en iterativ udviklingsprocess i form af en afar
 
 
 \section*{Abstract}
-This project has been developed by six students from Aarhus School of Engineering (Aarhus University). The purpose is to create a interdisciplinary projekt that covers the five courses that has been offered at the 4th semester on the ICT-studies. More than that, this project has the purpose of giving practical experience within agile softwaredevelopment, including but not limited to tests, version control and so forth.\\
+This project has been developed by six students from Aarhus School of Engineering, Aarhus University. The purpose is to create a interdisciplinary project that covers the five courses that has been offered at the 4th semester on the ICT-studies. More than that, this project has the purpose of giving practical experience within agile software development, including but not limited to tests, version control and so forth.\\
 
-The project has resulted in a functional prototype of a point-of-sale system, where one or more cash registers can be connected. In addition, an administration system have been developed, where super users can maintain the productcatalogue, as well as a central server, where both cash registers and administration systems can be interconnected. Both the cash register and the administrationsystem have been developed with a graphical user interface. \\
+The project has resulted in a functional prototype of a point-of-sale system, where one or more cash registers can be connected. In addition, an administration system has been developed, where superusers can maintain the product catalogue, as well as a central server, where both cash registers and administration systems can be connected to. Both the cash register and the administration system has been developed with a graphical user interface. \\
 
-Through the development, a variant of SCRUM has been used to keep the project agile. This has ensured and improved the possibility of developing on different subsystems concurrently. The product have been developed over the course of 5 iterations lasting a total of 14 weeks. Jenkins have been used for continuous integration as well as keeping track of total CodeCoverage. Git has been used for version control of source code, documentation and report writing. \\
+Through the development, a variant of SCRUM has been used to keep the project agile. This has ensured and improved the possibility of developing on different subsystems concurrently. The product has been developed over the course of 5 iterations lasting a total of 14 weeks. Jenkins has been used for continuous integration as well as keeping track of total CodeCoverage. Git has been used for version control of source code, documentation and report writing. \\
